# Voxelith

./: .gitignore  Cargo.toml  readme.md
src/: main.rs  utils.rs
src/chunk_geneariton/: mod.rs
src/entity/: mod.rs
src/game/: chunk.rs  entity.rs  handle_inputs.rs  mesh_updates.rs  mod.rs  pixel.rs  pixel_updates.rs  world.rs
src/lighting_updates/: mod.rs
src/mesh_creation/: create_mesh.rs  create_triangles.rs  mod.rs  pix_colors.rs
src/mesh_creator/: create_mesh.rs  files.rs  mod.rs
src/physics/: mod.rs
src/render/: app.rs  basic_mesh_shader.wgsl  camera.rs  composition_shader.wgsl  debug_gui.rs  entities.rs  entity_meshs.rs  full_shader.wgsl  gui.rs  handle_input.rs  init.rs  light_depth.wgsl  mesh.rs  mod.rs  render_frame.rs  shader.wgsl  types.rs  wgpu.rs
src/render/init/: composition.rs  entity_meshs.rs  gbuffer.rs  mod.rs  sun_shadows.rs  transparent.rs  volumetric_lighting.rs
src/render/meshs/: test.sevm
src/render/render_frame/: chunks.rs  gui.rs  mod.rs
src/render/shaders/: composition_shader.wgsl  full_shader.wgsl  light_depth.wgsl  transparent_shader.wgsl  volumetric_lighting_shader.wgsl
src/render_game/: chunk.rs  entities.rs  handle_input.rs  mod.rs
src/render_game/render_frame/: chunks.rs
