[package]
name = "Voxelith"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
cgmath = "0.18.0"
env_logger = "0.11.8"
fastnoise-lite = "1.1.1"
futures = "0.3.31"
log = "0.4.28"
pollster = "0.4.0"
rayon = "1.11.0"
wgpu = "26.0.1"
winit = "0.30.12"

[features]
perf_logs = []
